# SnipDock

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: design.md  target.md
src/: App.vue  QuickApp.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  quick_window.rs  settings.rs  tray.rs
src-tauri/src/commands/: backup.rs  categories.rs  mod.rs  settings.rs  snippets.rs
src-tauri/src/db/: migration.rs  mod.rs  repo.rs
src/api/: backup.ts  categories.ts  settings.ts  snippets.ts
src/components/: CategoryList.vue  Highlight.vue  ModalDialog.vue  SettingsDialog.vue  SnippetDetail.vue  SnippetEditor.vue  SnippetList.vue
src/composables/: useCategories.ts  useQuickSearch.ts  useShortcuts.ts  useSnippets.ts
src/styles/: global.css  tokens.css
src/types/: models.ts
